--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quaternion-wrapper"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["HamaguRe <hamagure@space-denpa.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -11,21 +11,18 @@ description = "Operator overloading allows implementation similar to mathematica
 keywords = ["math", "quaternion", "vector"]
 categories = ["mathematics", "science", "no-std"]
 readme = "README.md"
-build = "build.rs"
 
 [features]
 default = ["std"]
 std = ["quaternion-core/std", "num-traits/std"]
 fma = ["quaternion-core/fma"]
 libm = ["quaternion-core/libm", "num-traits/libm"]
+norm-sqrt = ["quaternion-core/norm-sqrt"]
 
 [dependencies.quaternion-core]
-version = "0.3.0"
+version = "0.4.2"
 default-features = false
 
 [dependencies.num-traits]
 version = "0.2.15"
 default-features = false
-
-[build-dependencies]
-autocfg = "1"
